--- a/src/main/resources/static/plugins/ueditor/ueditor.html
+++ b/src/main/resources/static/plugins/ueditor/ueditor.html
@@ -18,11 +18,6 @@
 <div>
     <script id="editor" type="text/plain" style="width:1024px;height:500px;"></script>
 </div>
-<script type="text/javascript">
-
-    //实例化编辑器
-    //建议使用工厂方法getEditor创建和引用编辑器实例，如果在某个闭包下引用该编辑器，直接调用UE.getEditor('editor')就能拿到相关的实例
-    var ue = UE.getEditor('editor');
-</script>
+<script type="text/javascript">var ue = UE.getEditor('editor');</script>
 </body>
 </html>
